// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "display": "contents",
    }
  }
>
  <p>
    Hello, World!
  </p>
</div>
`;

exports[` 2`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "",
    }
  }
  style={
    Object {
      "display": "contents",
    }
  }
/>
`;

exports[`dotcom-ui-shell/src/components/Body with stringified contents renders the given HTML string without escaping 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>Hello, World!</p>",
    }
  }
  style={
    Object {
      "display": "contents",
    }
  }
/>
`;
